--- a/templates/songlist.html
+++ b/templates/songlist.html
@@ -2,25 +2,23 @@
 
 {% block content %}
 
-<!-- Include Splitting.js library -->
+<!-- Splitting.js 라이브러리 포함 -->
 <script src="https://unpkg.com/splitting/dist/splitting.min.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/splitting/dist/splitting.css">
 
-<div id='timeline'>
-  <div class='row'>
-    {% for info in recommend_info %}
-    <div class='album' data-preview-url="{{ info.preview_url }}">
-      <div class='sleeve' style="background-image: url('{{ info.album_image_url }}');"></div>
-      <div class='text'>
-        <span data-splitting>{{ info.artist_name }} • {{ info.track_name }} • </span>
-      </div>
+<div id="timeline">
+  <div class="row">
+    {% for info in recommend_info[:10] %}
+    <div class="album" data-track-name="{{ info.track_name }}" data-artist-name="{{ info.artist_name }}">
+      <audio id="audio" preload="" data-preview-url="{{ info.preview_url }}"></audio>
+      <div class="sleeve" data-image-url="{{ info.album_image_url }}" style="background-image: url('{{ info.album_image_url }}');"></div>
+      <div class="text"><span data-splitting>{{ info.track_name }} • {{ info.artist_name }}</span></div>
     </div>
     {% endfor %}
   </div>
 </div>
-<div id='wrap'>
-  <div id='inner'></div>
+<div id="wrap">
+  <div id="inner"></div>
 </div>
-<audio id='audio' preload=''></audio>
 
 {% endblock %}
