--- a/templates/global_and_kr_tendency.html
+++ b/templates/global_and_kr_tendency.html
@@ -1,61 +1,110 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Recommended Tracks</title>
-</head>
-<body>
-    <h1>Recent Tracks vs. Top Tracks in Korea</h1>
+{% extends "layout/layout.html" %}
+{% block title %} playlist {% endblock %}
+{% block content %}
 
-    <div style="display: flex; justify-content: space-between;">
-        <!-- Recent Tracks -->
-        <div style="width: 45%;">
-            <h2>Recent Tracks</h2>
-            <ul>
-                {% for track in recent_tracks_info %}
-                <li>
-                    <strong>{{ track.track_name }}</strong><br>
-                    Artists: {{ track.artists | join(", ") }}<br>
-                    <img src="{{ track.album_image[0] }}" alt="Album Art"><br>
-                    {% if track.preview_url %}
-                    <audio controls>
-                        <source src="{{ track.preview_url }}" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                    </audio><br>
-                    {% else %}
-                    <em>No preview available</em><br>
-                    {% endif %}
-                    Released: {{ track.release_date }}
-                </li>
-                {% endfor %}
-            </ul>
-        </div>
 
-        <!-- Top Tracks in Korea -->
-        <div style="width: 45%;">
-            <h2>Top Tracks in Korea</h2>
-            <ul>
-                {% for track in top_tracks_kr_info %}
-                <li>
-                    <strong>{{ track.track_name }}</strong><br>
-                    Artists: {{ track.artists | join(", ") }}<br>
-                    <img src="{{ track.album_image[0] }}" alt="Album Art"><br>
-                    {% if track.preview_url %}
-                    <audio controls>
-                        <source src="{{ track.preview_url }}" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                    </audio><br>
-                    {% else %}
-                    <em>No preview available</em><br>
-                    {% endif %}
-                    Released: {{ track.release_date }}
-                </li>
-                {% endfor %}
+    <!-- Single Page Header start -->
+    <div class="container-fluid page-header py-5">
+        <h1 class="text-center text-white display-6">weekly hot tracks in 2 way</h1>
+        <ol class="breadcrumb justify-content-center mb-0">
+            <li class="breadcrumb-item"><a href="/home">Home</a></li>
+            <li class="breadcrumb-item active text-white">weekly hot tracks in 2 way</li>
+        </ol>
+    </div>
+    <!-- Single Page Header End -->
 
-            </ul>
+    <!-- weekly hot track Start-->
+    <div class="container-fluid fruite py-5">
+        <div class="container py-5">
+            <div class="tab-class text-center">
+                <div class="row g-4">
+                    <div class="col-lg-4 text-start">
+                        <h1>weekly hot track</h1>
+                    </div>
+                    <div class="col-lg-8 text-end">
+                        <ul class="nav nav-pills d-inline-flex text-center mb-5">
+                            <li class="nav-item">
+                                <a class="d-flex m-2 py-2 bg-light rounded-pill active" data-bs-toggle="pill" href="#tab-1">
+                                    <span class="text-dark" style="width: 130px;">Korea</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="d-flex py-2 m-2 bg-light rounded-pill" data-bs-toggle="pill" href="#tab-2">
+                                    <span class="text-dark" style="width: 130px;">BillBoard</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="tab-content">
+                    <div id="tab-1" class="tab-pane fade show p-0 active">
+                        <div class="row g-4">
+                            <div class="col-lg-12">
+                                <div class="row g-4">
+                                    {% for track in top_tracks_kr_info %}
+                                    <div class="col-md-6 col-lg-4 col-xl-3">
+                                        <div class="rounded position-relative fruite-item align-items-center">
+                                            <div class="fruite-img">
+                                                <img src="{{ track.album_image[0] }}" class="img-fluid w-100 rounded-top" alt="">
+                                            </div>
+                                            <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">HOT</div>
+                                            <div class="p-4 border border-secondary border-top-0 rounded-bottom">
+                                                <h4>{{ track.track_name }}</h4>
+                                                <p>{{ track.artists | join(", ") }}</p>
+                                                <div class="d-flex justify-content-between flex-lg-wrap">
+                                                    {% if track.preview_url %}
+                                                    <audio controls class="btn border border-secondary rounded-pill px-3 text-primary">
+                                                        <source src="{{ track.preview_url }}" type="audio/mpeg">
+                                                    </audio>
+                                                    {% else %}
+                                                    <button style="margin: 0 auto;" class="btn border border-secondary rounded-pill px-3 text-primary">No preview available</button> 
+                                                    {% endif %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="tab-2" class="tab-pane fade show p-0">
+                        <div class="row g-4">
+                            <div class="col-lg-12">
+                                <div class="row g-4">
+                                    {% for track in recent_tracks_info %}
+                                    <div class="col-md-6 col-lg-4 col-xl-3">
+                                        <div class="rounded position-relative fruite-item align-items-center">
+                                            <div class="fruite-img">
+                                                <img src="{{ track.album_image[0] }}" class="img-fluid w-100 rounded-top" alt="">
+                                            </div>
+                                            <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px;">HOT</div>
+                                            <div class="p-4 border border-secondary border-top-0 rounded-bottom">
+                                                <h4>{{ track.track_name }}</h4>
+                                                <p>{{ track.artists | join(", ") }}</p>
+                                                <p>Released on {{ track.release_date }}</p>
+                                                <div class="d-flex justify-content-between flex-lg-wrap">
+                                                    {% if track.preview_url %}
+                                                    <audio controls class="btn border border-secondary rounded-pill px-3 text-primary">
+                                                        <source src="{{ track.preview_url }}" type="audio/mpeg">
+                                                    </audio>
+                                                    {% else %}
+                                                    <button style="margin: 0 auto;" class="btn border border-secondary rounded-pill px-3 text-primary">No preview available</button> 
+                                                    {% endif %}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>      
         </div>
     </div>
-    <form style="padding-left: 20px;" action="/home" method="get" enctype="multipart/form-data">
-        <input type="submit" name="Back" value="Back"/>
-    </form>
-</body>
-</html>
+    <!-- KR weekly hot track End-->
+
+
+{% endblock %}
