--- a/templates/main.html
+++ b/templates/main.html
@@ -60,7 +60,7 @@
                             <a href="/playlists">
                                 <div class="d-flex p-4 rounded mb-4 bg-white">
                                     <div class="col-3 row align-items-center">
-                                        <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                        <img src="../static/img/mainImg/LP.jpg" class="img-fluid rounded-circle w-100" alt="">
                                     </div>
                                     <div class="p-4">
                                         <h4>Your Playlist</h4>
@@ -71,7 +71,7 @@
                             <a href="/songs">
                                 <div class="d-flex p-4 rounded mb-4 bg-white">
                                     <div class="col-3 row align-items-center">
-                                        <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                        <img src="../static/img/mainImg/guitar.jpg" class="img-fluid rounded w-100" alt="">
                                     </div>
                                     <div class="p-4">
                                         <h4>Most Listened Song</h4>
@@ -82,7 +82,7 @@
                             <a href="/artists">
                                 <div class="d-flex p-4 rounded bg-white">
                                     <div class="col-3 row align-items-center">
-                                        <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                        <img src="../static/img/mainImg/mp3.jpg" class="img-fluid rounded w-100" alt="">
                                     </div>
                                     <div class="p-4">
                                         <h4>Most Listened Artists</h4>
@@ -95,7 +95,7 @@
                             <a href="/songlist">
                                 <div class="d-flex p-4 rounded mb-4 bg-white">
                                     <div class="col-3 row align-items-center">
-                                        <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                        <img src="../static/img/mainImg/heart.jpg" class="img-fluid rounded w-100" alt="">
                                     </div>
                                     <div class="p-4">
                                         <h4>SOTS recommends you</h4>
@@ -106,7 +106,7 @@
                             <a href="/global_top_tracks">
                                 <div class="d-flex p-4 rounded mb-4 bg-white">
                                     <div class="col-3 row align-items-center">
-                                        <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                        <img src="../static/img/mainImg/global.jpg" class="img-fluid rounded w-100" alt="">
                                     </div>
                                     <div class="p-4">
                                         <h4>Global Top Tracks</h4>
@@ -117,7 +117,7 @@
                             <a href="/global_and_kr_tendency">
                                 <div class="d-flex p-4 rounded bg-white">
                                     <div class="col-3 row align-items-center">
-                                        <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                        <img src="../static/img/mainImg/check.jpg" class="img-fluid rounded-circle w-100" alt="">
                                     </div>
                                     <div class="p-4">
                                         <h4>WEEKLY HOT TRACKS</h4>
