--- a/templates/global_and_kr_tendency.html
+++ b/templates/global_and_kr_tendency.html
@@ -5,10 +5,10 @@
 
     <!-- Single Page Header start -->
     <div class="container-fluid page-header py-5">
-        <h1 class="text-center text-white display-6">weekly hot tracks in 2 way</h1>
+        <h1 class="text-center text-white display-6">Weekly hot tracks</h1>
         <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item"><a href="/home">Home</a></li>
-            <li class="breadcrumb-item active text-white">weekly hot tracks in 2 way</li>
+            <li class="breadcrumb-item"><a href="#">Weekly hot tracks</a></li>
         </ol>
     </div>
     <!-- Single Page Header End -->
@@ -19,7 +19,7 @@
             <div class="tab-class text-center">
                 <div class="row g-4">
                     <div class="col-lg-4 text-start">
-                        <h1>weekly hot track</h1>
+                        <h1>Weekly hot tracks</h1>
                     </div>
                     <div class="col-lg-8 text-end">
                         <ul class="nav nav-pills d-inline-flex text-center mb-5">
