--- a/static/css/style.css
+++ b/static/css/style.css
@@ -234,7 +234,7 @@
 
 .page-header {
     position: relative;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/cart-page-header-img.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/goatBanner.jpeg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
